<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsFragment">

    <!-- Customer info header -->
    <TextView
        android:id="@+id/tv_customer_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundText"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:text="@string/customer_info"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Customer header   -->
    <TextView
        android:id="@+id/tv_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/full_name_details"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <!--  Customer  -->
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="Ahmed Zaki"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_name_header"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_header" />


    <!-- Email header   -->
    <TextView
        android:id="@+id/tv_mail_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/email_address"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />


    <!--  Email  -->
    <TextView
        android:id="@+id/tv_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="ahmed_zaki@gmail.com"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_mail_header"
        app:layout_constraintTop_toBottomOf="@+id/tv_mail_header" />


    <!-- Mobile header   -->
    <TextView
        android:id="@+id/tv_mobile_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mobile_number_details"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />


    <!--  Mobile  -->
    <TextView
        android:id="@+id/tv_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="01114047187"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_mobile_header"
        app:layout_constraintTop_toBottomOf="@+id/tv_mobile_header" />


    <!-- Status header   -->
    <TextView
        android:id="@+id/tv_status_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/following_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mobile" />


    <!--  Status  -->
    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="Unfollowing"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_status_header"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_header" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_customer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_customer_info"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_phone_android"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mail"
        tools:ignore="ContentDescription" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:src="@drawable/ic_baseline_delete_forever"
        app:layout_constraintBottom_toBottomOf="@id/tv_customer_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/delete_customer_desc" />


</androidx.constraintlayout.widget.ConstraintLayout>